# Simple-Payment-System

./: .env  Cargo.toml  Dockerfile  README.md  compose.yaml
.sqlx/: query-3fd01500084777e4d4972699922839a44f2f1b2cb9fd1d293ff5bbb42f902cc5.json  query-5ea16462b6a88f8ea21c181d6995dc368a9161f3202cdb5ff8547a132f92725c.json  query-650f30628cf339f00f4615baa64031df081765f0068ca667bd53a7cddaa6032d.json  query-7b249731c98e01966e996e8783931d9154a8ab4d02c6ab4a246c3ce6841637e8.json  query-852093ff3f9840fc23677120a3e959a6fb43970544339200c3ab72fcd6247452.json  query-866b16a079b5afe4e3a6beed970489261c895d31ad3469cc3be61cf293a13331.json  query-8bfc9f38276a52a8397b9c216c49e0055b23e522eec03a62dcc1aea9bdc719a5.json  query-aa478ead255f34598e92864fe57f084e68fa651fcfb54e751e3a0e63f0ffae25.json  query-c82fe90d5fd020669a1b3fc141fee896e2b47e9fe988f2d2a32aaa8d24383e51.json  query-c8678ebedb04084f7f530cb0f3fdfb4656503fb24a84df65d1354a7175c0a2fb.json  query-ffae54ef6604eeaebbe06cea695a7f33bf5c8cb8f000765b629554914efb6b3e.json
migrations/: 20240709161547_user_credentials.sql  20240711084516_user_account_balance.sql  20240711090835_transactions.sql  20240711104530_transaction_amount.sql
src/: api_doc.rs  app_state.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
src/balance/: db.rs  mod.rs
src/transaction/: db.rs  mod.rs
src/user/: db.rs  mod.rs
src/utils/: mod.rs
