[package]
name = "simple-payment-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
rust-argon2 = "2.1.0"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["buffer", "limit"] }
tower-http = { version = "0.5.2", features = ["catch-panic", "timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.9.1", features = ["fast-rng", "v4"] }
