[package]
name = "simple-payment-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["buffer", "limit"] }
tower-http = { version = "0.5.2", features = ["catch-panic", "timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "url", "uuid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum", "reqwest"] }
validator = { version = "0.18.1", features = ["derive"] }
